Correct alignment

--- a/app/assets/stylesheets/content/work_packages/inplace_editing/_edit_fields.sass
+++ b/app/assets/stylesheets/content/work_packages/inplace_editing/_edit_fields.sass
@@ -85,6 +85,11 @@
   &.inplace-edit .custom-option:not(.-multiple-lines)
     display: inline
 
+  .inline-label
+    .form-label,
+    .icon-context:before
+      padding-right: 0
+
 // Full width container
 .wp-table--cell-container
   display: inline-block
